preventDefault a tag href event

--- a/example/index.html
+++ b/example/index.html
@@ -9,7 +9,7 @@
 <body>
     <div ng-controller="DemoCtrl as demo">
         <h2 ng-bind="demo.welcome"></h2>
-        <a ng-really-title="Confirm Dialog" ng-really-message="Are you really click?" ng-really-click="takeAction()">Really Clock?</a>
+        <a href="hello world!" ng-really-title="Confirm Dialog" ng-really-message="Are you really click?" ng-really-click="takeAction()">Really Clock?</a>
         <button ng-really-title="Confirm Dialog" ng-really-message="Are you really click?" ng-really-click="takeAction()">Really Clock?</button>
     </div>
     <script type="text/javascript" src="../bower_components/angular/angular.js"></script>
