--- a/example/index.html
+++ b/example/index.html
@@ -9,13 +9,15 @@
 <body>
     <div ng-controller="DemoCtrl as demo">
         <h2 ng-bind="demo.welcome"></h2>
-
-        <h3>Really Click The Button</h3>
+        <h3>Really Click With The Button</h3>
         <button ng-really-title="Confirm Dialog" ng-really-message="Are you really click?" ng-really-click="demo.takeAction()" ng-really-cancle="demo.cancle()">Really Clock?</button>
 
-        <h3>Really navigating to other link?</h3>
-        <a href="hello world!" ng-really-title="Confirm Dialog" ng-really-message="Are you really click?" ng-really-click="demo.ok()">Really Clock?</a>
+        <h3>Really Click With The Href?</h3>
+        <a href="http://www.baidu.com" ng-really-title="Confirm Dialog" ng-really-message="Are you really click?" ng-really-click="demo.ok()">Really Clock?</a>
 
+
+        <h3>Really Href Navigate </h3>
+        <a href="http://www.baidu.com" ng-really-href="Are you sure navigate to other link?">Realy Navigate?</a>
     </div>
     <script type="text/javascript" src="../bower_components/angular/angular.js"></script>
     <script type="text/javascript" src="../bower_components/angular-sanitize/angular-sanitize.js"></script>
